--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.0",
     "react-spring": "^9.7.2",
+    "react-toastify": "^10.0.5",
     "react-whatsapp": "^0.3.0",
     "reactstrap": "^9.1.10",
     "resend": "^1.0.0",
