--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-#REACT_APP_SERVER_IP=https://innova-dashboard.com:443/api
-REACT_APP_SERVER_IP=http://localhost:8080/api
+REACT_APP_SERVER_IP=https://innova-dashboard.com:443/api
 REACT_APP_WEB_SOCKET_IP=wss://innova-dashboard.com:443/ws
+#REACT_APP_SERVER_IP=http://localhost:8080/api
+#REACT_APP_WEB_SOCKET_IP=ws://localhost:8080/ws
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAg1vU0AXRkmNfvSHA9w80zncSEuhQiJlg
 REACT_APP_EMAILJS_API_KEY=NG0IsWchGelwprDCP
 REACT_APP_S3_BUCKET_URL=https://innova-bucket.s3.amazonaws.com
@@ -12,4 +13,3 @@ REACT_APP_EMAILJS_SENDINGD_REPORT_SERVICE_ID=service_ec8agim
 #REACT_APP_EMAILJS_SENDINGD_REPORT_SERVICE_ID=service_9gk50qb
 REACT_APP_EMAILJS_SENDINGD_REPORT_TEMPLATE_ID=template_2w5em4j
 #REACT_APP_EMAILJS_SENDINGD_REPORT_TEMPLATE_ID=template_mgdlvbj
-
