--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.1",
+    "@mui/material": "^5.16.7",
+    "@mui/x-data-grid": "^7.18.0",
+    "@mui/x-date-pickers": "^7.18.0",
+    "@mui/x-date-pickers-pro": "^7.18.0",
     "@react-google-maps/api": "^2.19.2",
     "@syncfusion/ej2": "^19.4.48",
     "@syncfusion/ej2-react-calendars": "^19.4.48",
@@ -29,6 +37,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "days": "^1.1.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.4",
     "html2canvas": "^1.4.1",
@@ -38,10 +47,14 @@
     "leaflet": "^1.9.4",
     "leaflet-rotatedmarker": "^0.2.0",
     "loaders.css": "^0.1.2",
+    "mediainfo.js": "^0.3.2",
+    "moment": "^2.30.1",
+    "momento": "^0.2.0",
     "net": "^1.0.2",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.13.4",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-floating-whatsapp": "^5.0.8",
