--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@heroicons/react": "^2.0.18",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.16.7",
+    "@mui/material": "^5.11.10",
     "@mui/x-data-grid": "^7.18.0",
-    "@mui/x-date-pickers": "^7.18.0",
+    "@mui/x-date-pickers": "^5.0.4",
     "@mui/x-date-pickers-pro": "^7.18.0",
     "@react-google-maps/api": "^2.19.2",
     "@syncfusion/ej2": "^19.4.48",
@@ -37,6 +37,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "date-fns": "^2.29.3",
     "days": "^1.1.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.4",
